# johntron

./: .eslintrc  .gitignore  .npmignore  .talismanrc  .travis.yml  LICENSE  README.md  index.test.js  package-lock.json  package.json  vs.code-workspace  werf.yaml
3d-printing/: baby_gate_mounting_bracket.scad  keystone.scad  patch panel.scad  prusa mk4 z-axis dust covers.FCStd
3d-printing/Cache aerator wrench - Tom Thumb 16.5x1mm/: Cache aerator wrench - Tom Thumb 16.5x1.step  Cache aerator wrench - Tom Thumb 16.5x1mm.FCStd  Cache aerator wrench - Tom Thumb 16_0.6n_0.32mm_PETG_MK4IS_5m.bgcode
3d-printing/Nova's tricycle/: Bushing-Bushing.3mf  Bushing.FCStd  Desiccant holder-Desiccant holder.3mf
3d-printing/boxes/: 120mm.3mf  40mm.FCStd  600mm.3mf  80mm.3mf
3d-printing/cable management/: Cable clip (copy).FCStd  Cable clip.FCStd  ORB Audio Booster amplifier mount.FCStd
3d-printing/calibration/: main.py  run.fish
3d-printing/camera mount y-carriage/: camera mount y-carriage-Partbrace.3mf  camera mount y-carriage-Partframe.3mf  camera mount y-carriage.3mf  camera mount y-carriage.FCStd
3d-printing/cycloidal/: cycloid.scad  disk.py  print-in-place cycloidal.FCStd
3d-printing/nova's kitty keyboard/: nova's kitty keyboard.FCStd
3d-printing/nova's play doh toys/: shrinkwrap.FCStd
3d-printing/orb audio mount/: orb audio mount-orb audio mount.3mf  orb audio mount-orb audio mount.step  orb audio mount-orb audio mount_0.4n_0.2mm_PETG_MK4IS_57m.bgcode  orb audio mount.FCStd
3d-printing/prusa enclosure center support/: prusa enclosure center support revised.FCStd  prusa enclosure center support.FCStd
3d-printing/space colony construction set/: module core.FCStd
3d-printing/spool system/: Desiccant holder.FCStd  README.md
3d-printing/utensils storage/: extrude.scad
audit/: audit  clean  results  trufflehog_exclude_paths
automation-game/: automation-game.yml  docker-compose.yml  index.js  skaffold.yaml
automation-game/equipment/: Dockerfile  package-lock.json  package.json
automation-game/workstation/: package.json
curriculum/: problem-solving.md
curriculum/simulation/: index.md
ddns/: README.md  ddns.sh
dockerfiles/: Dockerfile-base-x11  Dockerfile-gnuradio
docs/: CNAME  README.md
gnuradio-companion-web/: Dockerfile  Dockerfile-gnuradio-companion  README.md  test.grc  top_block.py
gnuradio-companion-web/gnuradio-agent/: Dockerfile  custom_sink.grc  gnuradio-runtime.conf
gnuradio-companion-web/gnuradio-runner/: Dockerfile
history/: README.md  config.js  request_logger.js
home/: README.md  enable-kvm.sh  gateway.yaml  inventory.md
home/apache-spark/: README.md
home/coredns/: README.md  coredns-mdns.gocd.yaml  coredns-mdns.yaml  plugin.cfg  values.yaml  werf.yaml
home/coredns-mdns/: Dockerfile  README.md  werf.yaml
home/dnsmasq/: Chart.yaml  README.md  values.yaml
home/elastic-eck/: README.md
home/gocd/: README.md
home/harvester/: README.md
home/homeassistant/: README.md  busybox.yaml  values.yaml  virtual-service.yaml
home/jupyterhub/: README.md
home/metallb/: README.md  values.yaml
home/minio/: README.md
home/mosquitto/: values.yaml
home/network/: .env.template  .gitignore  README.md  export.ts  import.ts  package-lock.json  package.json
home/nginx/: README.md
home/parts/: baby_gate_mounting_bracket.scad  keystone.scad
home/prometheus/: readme.md  values.yaml
home/rstudio/: README.md
home/speedtest-exporter/: readme.md  values.yaml
home/surveillance/: gateway.yaml  service-entry.yaml  virtual-service.yaml  workload-entry.yaml
home/zeppelin/: zeppelin-server.yaml
home/zwavejs2mqtt/: README.md
knowledge/: awesome.md  browser-performance.md  business-analysis.md  code-design.html  concept-sprints.md  data-exfiltration.md  data-visualization.md  foundational-platform-code.md  frameworkless.md  frontend.md  index.md  index.ts  linting.md  monitoring.md  nodejs-caching.md  package.json  power-supply-topologies.md  react-async.md  remote-device-testing.md  robotics.md  security-javascript.md  software-design.puml  style-css.md  teamwork.md  testing.md  tsconfig.base.json  tsconfig.json
knowledge/coffee/: espresso.md
knowledge/corpus/: backend-for-frontend.md  browser-performance.md  business-analysis.md  code-design.md  code-smells.md  cross-platform-software.md  deploying-to-production.md  index.md  logging-and-monitoring.md  machine-learning.md  mental-tools.md  pipelines.md  security.md  spacevim.md  testing.md
knowledge/parenting/: index.md
projects/: Track guide hinge.FCStd  Track guide hinge.FCStd1  cloud-app-reference.md  gnu-radio-for-chrome.md  tracksaw vacuum adapter.3mf  tracksaw vacuum adapter.FCStd  tracksaw vacuum adapter.FCStd1  tracksaw vacuum adapter.stl
projects/gnuradio-companion-web/gnuradio-agent/custom_sink/lib/: CMakeLists.txt
projects/robotics/simulation/: CMakeLists.txt  build.sh  hello_world.cpp  run.sh  world.world
projects/robotics/simulation/modules/diff_drive/: diff_drive.cpp
projects/robotics/simulation/robot_description/: metadata.pbtxt
projects/space/subsystems/control/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
projects/space/subsystems/control/docs/: components.mermaid
projects/space/subsystems/control/lib/tb6612fng_mbed/: differential_drive.h  motor.cpp  motor.h
projects/space/subsystems/control/src/: main.cpp
projects/space/subsystems/control/test/: motor.cpp
space/: .gitignore  README.md
space/src/: main.cpp
topic-suggestions/: kubernetes.yaml  package-lock.json  package.json
topics/: backend-for-frontend.md  browser-performance.md  data-exfiltration.md  index.md  linting.md  microservices.md  monorepos.md  nodejs-build-scripts.md  nodejs-caching.md  nodejs-server-side-rendering.md  react-async.md  react-state-management.md  security.md  shopping-carts.md  spreadsheets.md  static-site-generators.md  testing.md
web/: README.md  deployment.yml  skaffold.yaml
(+429 files in other folders)
